# VoxelEngine

./: .ccls  .exrc  .gitignore  .vimspector.json  Application.cpp  CMakeLists.txt  Camera.h  Chunk.cpp  Chunk.h  Core.h  Cube.h  CubeHandler.cpp  CubeHandler.h  Engine.cpp  Engine.h  EntityComponentSystem.cpp  EntityComponentSystem.h  Factory.cpp  Factory.h  Lightsource.cpp  Lightsource.h  ModelLoader.h  MouseHandler.cpp  MouseHandler.h  Node.cpp  Node.h  README.md  Scene.cpp  Scene.h  Shader.h  TextHandler.h  VoxelEngine.code-workspace  imgui.ini  main.cpp
Components/Editor/: CMakeLists.txt  EditorApplication.cpp
Components/Editor/gui/: Panel.cpp
Components/Engine/: CMakeLists.txt  Core.h  EditorGameMode.cpp  EditorGameMode.h  Engine.cpp  Engine.h  Factory.cpp  Factory.h  GameMode.cpp  GameMode.h  Node.cpp  Node.h  PhysicsHandler.cpp  PhysicsHandler.h  Scene.cpp  Scene.h  VerletHandler.cpp  VerletHandler.h
Components/Engine/components/: Attenuation.cpp  Attenuation.h  BaseComponents.h  Color.cpp  Color.h  Cube.cpp  Cube.h  Direction.cpp  Direction.h  InvertedHull.cpp  InvertedHull.h  Material.cpp  Material.h  Name.cpp  Name.h  Outline.cpp  Outline.h  Position.cpp  Position.h  Position2D.cpp  Position2D.h  RigidBody.cpp  RigidBody.h  Shader.cpp  Shader.h  Verlet.cpp  Verlet.h  VertexBufferArray.cpp  VertexBufferArray.h  VisibleText.cpp  VisibleText.h
Components/Engine/entities/: Attenuation.cpp  BaseComponents.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Color.h  Cube.cpp  Cube.h  CubeEntity.cpp  CubeEntity.h  EntityComponentSystem.cpp  EntityComponentSystem.h  Handle.cpp  Handle.h  Lightsource.cpp  Lightsource.h  Material.cpp  Name.cpp  PlayerController.cpp  PlayerController.h  Skybox.cpp  Skybox.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  TransformNode.cpp  TransformNode.h  WorldChunk.cpp  WorldChunk.h
Components/Engine/entityComponentSystem/: EntityComponentSystem.h  Handle.cpp  Handle.h
Components/Engine/entityComponentSystem/test/: ECSTests.cpp
Components/Engine/entityComponentSystem/tests/: ECSTests.cpp
Components/Engine/gui/: Panel.cpp  Panel.h
Components/Engine/input/: InputDefinitions.h  KeyboardHandler.cpp  KeyboardHandler.h  MouseHandler.cpp  MouseHandler.h
Components/Engine/rendering/: Camera.cpp  Camera.h  RenderingHandler.cpp  RenderingHandler.h  RenderingInterface.cpp  RenderingInterface.h  Shader.cpp  Shader.h  TextHandler.cpp  TextHandler.h  VertexBufferArray.h  Window.cpp  Window.h
Components/Engine/test/: engine_tests.cpp
Components/Engine/tests/: engine_tests.cpp
Components/Engine/utility/: ChunkPos.cpp  ChunkPos.h  Delegate.h  JsonUtil.h  LoadTexture.cpp  LoadTexture.h  ModelLoader.h  TextHandler.cpp  TextHandler.h  ThreadPool.cpp  ThreadPool.h  TimeMeasurement.cpp  TimeMeasurement.h
Editor/: EditorApplication.cpp
Editor/gui/: Panel.cpp  Panel.h
entities/: BaseComponents.h  Chunk.cpp  Chunk.h  Cube.cpp  Cube.h  EntityComponentSystem.cpp  EntityComponentSystem.h  Lightsource.cpp  Lightsource.h  ModelHandler.cpp  ModelHandler.h  Skybox.cpp  Skybox.h  Sprite.cpp  Sprite.h  TransformNode.cpp  TransformNode.h
input/: KeyboardHandler.cpp  KeyboardHandler.h  MouseHandler.cpp  MouseHandler.h
rendering/: Camera.cpp  Camera.h  RenderingHandler.cpp  RenderingHandler.h  Shader.h  VertexBufferArray.h  Window.h
resources/scenes/: ComplexScene.voxie  MainScene.vox  MainScene.voxie  blaaa  config2.yaml  scene1.vox  scene2.vox
resources/shaders/: basic_light.fs  basic_light.vs  cunk.vs  invertedHull.fs  outline.vs  sprite.vs
resources/voxelObjects/: 3x3x3.vox  8x8x8.vox  floor.vox  test.vox
shaders/: basic_light.fs  basic_light.vs
utility/: Delegate.h  LoadTexture.cpp  LoadTexture.h  Logging.h  ModelLoader.h  TextHandler.h
voxelObjects/: test.vox
